[gd_scene load_steps=8 format=3 uid="uid://dyfm1a2vcruhk"]

[ext_resource type="Material" uid="uid://dh50ypgn26p6a" path="res://entities/level_entities/obstacles/water_gun/art/shader/water_gun.tres" id="1_k45an"]
[ext_resource type="Script" uid="uid://c40pgcxabmgjl" path="res://entities/level_entities/obstacles/water_gun/water_gun.gd" id="1_w2e3s"]

[sub_resource type="Gradient" id="Gradient_w2e3s"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_myjpt"]
gradient = SubResource("Gradient_w2e3s")
width = 2
height = 2

[sub_resource type="Curve" id="Curve_w2e3s"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.535484, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_7lrcx"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w2e3s"]
gradient = SubResource("Gradient_7lrcx")

[node name="WaterGun" type="Node2D"]
script = ExtResource("1_w2e3s")

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-10, 0)
target_position = Vector2(0, 64)
collision_mask = 128

[node name="CenterRayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 64)
collision_mask = 128

[node name="RightRayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(10, 0)
target_position = Vector2(0, 64)
collision_mask = 128

[node name="WaterMask" type="ColorRect" parent="."]
unique_name_in_owner = true
clip_children = 1
offset_left = -20.0
offset_right = 20.0
offset_bottom = 64.0

[node name="Water" type="ColorRect" parent="WaterMask"]
unique_name_in_owner = true
material = ExtResource("1_k45an")
layout_mode = 0
offset_left = 7.0
offset_right = 33.0
offset_bottom = 1894.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(11, 0)
texture = SubResource("GradientTexture2D_myjpt")
lifetime = 0.34
local_coords = true
gravity = Vector2(0, -980)
initial_velocity_min = 20.58
initial_velocity_max = 125.66
scale_amount_min = 0.4
scale_amount_max = 0.9
scale_amount_curve = SubResource("Curve_w2e3s")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
texture = SubResource("GradientTexture2D_myjpt")
lifetime = 0.34
local_coords = true
direction = Vector2(-1, 0)
gravity = Vector2(0, -980)
initial_velocity_min = 20.58
initial_velocity_max = 125.66
scale_amount_min = 0.4
scale_amount_max = 0.9
scale_amount_curve = SubResource("Curve_w2e3s")

[node name="EndSpray" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 64)
scale = Vector2(0.453125, 0.117188)
texture = SubResource("GradientTexture2D_w2e3s")
